syntax = "proto3";

import "common.proto";

package com.spectrum.workfolio.proto;

option java_multiple_files = true;
option java_package = "com.spectrum.workfolio.proto.payment_tx";
option java_outer_classname = "PaymentTxProto";

message PaymentTxListResponse {
  repeated PaymentTx payment_txs = 1;
}

message PaymentTxGetResponse {
  PaymentTx payment_tx = 1;
}

message PaymentTxCreateRequest {
  string payment_id = 1;
  PaymentTx.TransactionType transaction_type = 2;
  string status = 3;
  int64 amount = 4;
  optional string transaction_id = 5;
  optional string request_data = 6;
  optional string response_data = 7;
  optional string error_message = 8;
  optional string receipt_url = 9;
}

message PaymentTxUpdateRequest {
  string id = 1;
  PaymentTx.TransactionType transaction_type = 2;
  string status = 3;
  int64 amount = 4;
  optional string transaction_id = 5;
  optional string request_data = 6;
  optional string response_data = 7;
  optional string error_message = 8;
  optional string receipt_url = 9;
}

